// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarItem SidebarItem renders with no props passed in 1`] = `
<MenuItem
  className="sidebar-item "
>
  <div
    className="sidebar-item-alignment-container"
  >
    <span>
      <Icon
        as="i"
        size="large"
      />
       
    </span>
    <span />
  </div>
</MenuItem>
`;

exports[`SidebarItem highlighted SidebarItem renders with icon and label 1`] = `
<MenuItem
  className="sidebar-item "
>
  <div
    className="sidebar-item-alignment-container"
  >
    <span>
      <Icon
        as="i"
        name="fire"
        size="large"
      />
       
    </span>
    <span>
      Trending
    </span>
  </div>
</MenuItem>
`;

exports[`SidebarItem non-highlighted SidebarItem renders with icon and label 1`] = `
<MenuItem
  className="sidebar-item "
>
  <div
    className="sidebar-item-alignment-container"
  >
    <span>
      <Icon
        as="i"
        name="fire"
        size="large"
      />
       
    </span>
    <span>
      Trending
    </span>
  </div>
</MenuItem>
`;
